test_case/rust-lang_rust/47992_364729651_2.rs
rust
#[uses(S, T)]
macro m($i:ident) {
    struct S; //~ ERROR cannot define identifiers in `#[uses()]` but not `#[defines()]`
    T // resolves at the call-site
}
